<resources>
    <string name="app_name">EventApp</string>
    <string name="title_activity_home_nav">Home Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_finished">Finished</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="refresh">refresh</string>
    <string name="browse">Browse</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="all_event">All Event</string>
    <string name="desc_favorite_button">Description of Favorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="night_theme">Night Theme</string>
    <string name="day_theme">Day Theme</string>
</resources>